--- a/app/src/main/res/layout/activity_businregist_page.xml
+++ b/app/src/main/res/layout/activity_businregist_page.xml
@@ -86,7 +86,7 @@
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="連絡電話"
+                android:hint="連絡電話(市話需含區域碼)"
                 android:textColorHint="#C55A11">
 
                 <com.google.android.material.textfield.TextInputEditText
@@ -94,7 +94,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ems="10"
-                    android:inputType="textPhonetic" />
+                    android:inputType="phone" />
             </com.google.android.material.textfield.TextInputLayout>
         </LinearLayout>
 
